# profunctor-monad

./: CHANGELOG.md  README.md  profunctor-monad.cabal
coq/: ExampleLens.v  ExampleParser.v  Makefile  Promonad.v  README.md  _CoqProject
example/: hashcons.hs
src/Profunctor/: Monad.hs
src/Profunctor/Monad/: Cofunctor.hs  Combinators.hs  Contravariant.hs  Core.hs  Lifts.hs  Monad.hs  MonadCoAction.hs  NewCombinators.hs  Partial.hs  Profunctor.hs  Syntax.hs
