name:                profunctor-monad
version:             0.2.0.0
synopsis:            Monadic bidirectional programming
description:
  Applicative and monadic interface for bidirectional programming.
homepage:            https://github.com/Lysxia/profunctor-monad
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia, Samantha Frohlich, Dominic Orchard, Meng Wang
maintainer:          lysxia@gmail.com
category:            Control
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Profunctor.Monad
    Profunctor.Monad.Cofunctor
    Profunctor.Monad.Core
    Profunctor.Monad.Combinators
    Profunctor.Monad.Lifts
    Profunctor.Monad.Monad
    Profunctor.Monad.MonadCoAction
    Profunctor.Monad.Profunctor
    Profunctor.Monad.Syntax
  build-depends:
    base >= 4.9 && < 4.17,
    constraints,
    profunctors
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

test-suite hashcons
  type: exitcode-stdio-1.0
  main-is: hashcons.hs
  hs-source-dirs: example
  build-depends:
    base,
    unordered-containers,
    hashable,
    mtl,
    transformers,
    profunctor-monad
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

source-repository head
  type:     git
  location: https://github.com/Lysxia/profunctor-monad
